--- a/JavaScript设计模式与开发实践/2.设计模式/单例模式.md
+++ b/JavaScript设计模式与开发实践/2.设计模式/单例模式.md
@@ -1,11 +1,10 @@
-## 设计模式
-
-### 单例模式
-定义：保证一个类仅有一个实例，并提供一个访问它的全局访问点。核心是确保只有一个实例，并提供全局访问。
+# 单例模式
+## 定义：
+保证一个类仅有一个实例，并提供一个访问它的全局访问点。核心是确保只有一个实例，并提供全局访问。
 
 有一些对象我们在实际应用中只需要一个，比如线程池、全局缓存、浏览器中的window对象等。这种时候就适合使用单例模式。
 
-实现方法：
+## 实现方法：
 ```
 //普通的单例模式
 //通过使用一个变量去标志当前是否已经创建过对象，如果已经创建，那么在下次获取该实例时可以直接返回
@@ -117,6 +116,7 @@ document.getElementById( 'loginBtn' ).onclick = function(){
 };
 ```
 
+## 全局变量
 全局变量不是单例模式，但是我们经常会把全局变量当成单例来使用，因为如果你使用var a = {} 创建一个对象a的时候，a确实是独一无二的，并且a确实能在全局访问，这满足了单例模式的两个条件，__但是__ 全局变量存在很多问题，它很容易造成命名空间污染，并且在大中型项目中，如果不加以限制和管理，很容易造成全局变量的覆盖。
 
 所以我们如果不得不去使用全局变量的使用的时候可以采取一些方式去相对降低全局变量带来的命名污染：
