--- a/JavaScript设计模式与开发实践/2.设计模式/模板方法模式.md
+++ b/JavaScript设计模式与开发实践/2.设计模式/模板方法模式.md
@@ -1,5 +1,4 @@
 # 模板方法模式
-（ extend, mixin, plugin ）
 
 ## 定义
 模板方法模式是一种只需使用继承就可以实现的非常简单的模式。
@@ -62,3 +61,48 @@ coffee.init();
 ### java中的抽象类的作用
 在java中，抽象类（abstract class）不能像普通的类（class）那样被实例化。所以如果有人编写了一个抽象类，那么这个抽象类一定是用来被某些具体类抽象的。
 
+## 好莱坞原则
+“别调用我们，我们会调用你”，允许底层组件将自己挂钩到高层组件中，而高层组件会决定什么时候、以何种方式去使用这些底层组件。
+
+发布-订阅模式和回调函数也使用这种原则
+
+## 在js中，我们可以不依靠继承而使用模板方法模式
+这时候又需要高阶函数出场了~
+```
+var Beverage = function( param ){
+    var boilWater = function(){
+        console.log( '把水煮沸' );
+    };
+    var brew = param.brew || function(){
+        throw new Error( '必须传递brew 方法' );
+    };
+    var pourInCup = param.pourInCup || function(){
+        throw new Error( '必须传递pourInCup 方法' );
+    };
+    var addCondiments = param.addCondiments || function(){
+        throw new Error( '必须传递addCondiments 方法' );
+    };
+    var F = function(){};
+        F.prototype.init = function(){
+        boilWater();
+        brew();
+        pourInCup();
+        addCondiments();
+    };
+    return F;
+};
+var Coffee = Beverage({
+    brew: function(){
+        console.log( '用沸水冲泡咖啡' );
+    },
+    pourInCup: function(){
+        console.log( '把咖啡倒进杯子' );
+    },
+    addCondiments: function(){
+        console.log( '加糖和牛奶' );
+    }
+});
+
+var coffee = new Coffee();
+coffee.init();
+```
